# discord-support-agent

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml  setup.py
.beads/: issues.jsonl  last-touched
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  4-change.md  config.yml
.github/workflows/: ci.yml  release.yml
config/: pytest.ini  ruff.toml
docs/.overrides/partials/: comments.html
docs/reference/: api.md
src/discord_support_agent/: __init__.py  bot.py  classifier.py  config.py  evals.py  instrumentation.py  issue_tracker.py  notifier.py  usage.py
tests/: __init__.py  conftest.py  test_bot.py  test_classifier.py  test_evals.py  test_instrumentation.py  test_issue_tracker.py  test_main.py  test_setup.py  test_usage.py
