[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "discord-support-agent"
description = "AI agent that monitors Discord servers and notifies about support requests"
authors = [{name = "Ismar Iljazovic", email = "ismart@gmail.com"}]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
keywords = []
version = "1.3.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "discord-py>=2.6",
    "logfire>=3",
    "pydantic-ai>=1.39.0",
    "pydantic-evals>=0.3",
    "pygithub>=2.8.1",
]

[project.urls]
Homepage = "https://detailobsessed.github.io/discord-support-agent"
Documentation = "https://detailobsessed.github.io/discord-support-agent"
Changelog = "https://detailobsessed.github.io/discord-support-agent/changelog"
Repository = "https://github.com/detailobsessed/discord-support-agent"
Issues = "https://github.com/detailobsessed/discord-support-agent/issues"
Discussions = "https://github.com/detailobsessed/discord-support-agent/discussions"
Funding = "https://github.com/sponsors/detailobsessed"

[dependency-groups]
maintain = [
    "build>=1.2",
    "yore>=0.4",
    "python-semantic-release>=10",
]
ci = [
    "ruff>=0.11",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.5",
    "ty>=0.0.1a20",
    "poethepoet>=0.32",
    "bandit>=1.8",
    "vulture>=2.13",
]
local = [
    "prek>=0.2.20",
]
docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.10",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4",
    "mkdocs-llmstxt>=0.4",
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.27",
    # YORE: EOL 3.10: Remove line.
    "tomli; python_version < '3.11'",
]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs", "local", "dev"]

[tool.poe.tasks]
# Setup
setup = "uv sync"

# Quality checks
lint = "ruff check src tests --config config/ruff.toml"
format = "ruff format src tests --config config/ruff.toml"
typecheck = "ty check src tests"
security = "bandit -r src -c config/bandit.toml"
deadcode = "vulture src tests --min-confidence 80 --ignore-names cls"

# Testing
test = "pytest tests -c config/pytest.ini"
test-cov = "pytest tests -c config/pytest.ini --cov=src --cov-report=term-missing --cov-report=html"

# Combined tasks
check = ["lint", "typecheck", "security", "deadcode"]
fix = ["lint --fix", "format"]

# Documentation
docs = "mkdocs serve"
docs-build = "mkdocs build -s"
docs-deploy = "mkdocs gh-deploy"

# Pre-commit
prek = "prek run --all-files"

# GitHub utilities
releases = "gh release list --limit 10"
tags = "sh -c 'git fetch --tags && git tag --sort=-version:refname'"
runs = "gh run list --limit 10"
prs = "gh pr list"
watch = "gh run watch"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_message = "chore(release): {version}"
tag_format = "{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "deps", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
